fix dark mode code box colors

--- a/themes/geekdoc/assets/styles/_chroma_dark.scss
+++ b/themes/geekdoc/assets/styles/_chroma_dark.scss
@@ -10,7 +10,7 @@
   /* PreWrapper */
   .chroma {
     color: #f8f8f2;
-    background-color: #272822;
+    background-color: #19212C;
   }
   /* Other */
   .chroma .x {
