--- a/themes/geekdoc/assets/styles/_defaults.scss
+++ b/themes/geekdoc/assets/styles/_defaults.scss
@@ -67,7 +67,7 @@ $link-color-dark: #8bcbe6 !default;
 $link-color-visited-dark: rgb(186, 142, 240) !default;
 
 $code-background: lighten($gray-200, 4) !default;
-$code-background-dark: #1c2431 !default; //#31353b; //darken($body-background-dark, 2) !default;
+$code-background-dark: #19212C !default; //#31353b; //darken($body-background-dark, 2) !default;
 
 $header-height: 3.5rem !default;
 $menu-width: 16rem !default;
